style.css
a {
  text-decoration: none;
}

li {
  list-style: none;
}

.logo-sec {
  display: flex;
  flex-direction: row;
  height: 66px;
  background-color: white;
  justify-content: space-between;
}

.wel {
  color: rgba(40, 53, 47, 1);
  font-size: 20px;
  font-weight: 600;
  height: 28px;
  margin-left: 24px;
  margin-top: 22px;
}

.menu {
  display: flex;
  flex-direction: row;
  margin-top: 29px;
}

.image {
  height: 16px;
  margin-right: 32px;
}

.info1 {
  display: flex;
  height: auto;
  flex-direction: column;
  background-image: url("img/bg1.png");
  background-repeat: no-repeat;
  background-color: #fff;
  background-size: contain;
  background-position: center;
}

.heading {
  display: flex;
  margin-top: 32px;
  flex-direction: column;
  width: 80%;
  max-height: 192px;
  margin-bottom: 0;
  margin-left: 24px;
  margin-right: 24px;
  align-items: center;
}

.heading1 {
  flex: 1;
  font-size: 40px;
  font-family: "Inter", sans-serif;
  line-height: 52px;
  font-weight: 700;
  color: #172b4d;
  text-align: center;
  margin-bottom: 0;
}

.heading2 {
  flex: 1;
  font-family: "Inter", sans-serif;
  font-size: 32px;
  font-weight: 700;
  line-height: 48px;
  color: #36b37f;
  margin-top: 0;
  text-align: center;
}

.texting {
  flex: 1;
  display: flex;
  margin-top: 58px;
  height: 164px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 0;
}

.text1 {
  flex: 1;
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-size: 20px;
  line-height: 28px;
  font-weight: normal;
  color: #172b4d;
  text-align: center;
}

.icons {
  flex: 1;
  display: flex;
  flex-direction: row;
  margin-top: 58px;
  margin-left: auto;
  margin-right: auto;
}

.icon1 {
  flex: 1;
  width: 19.99px;
  height: 19.96px;
}

.icon2 {
  flex: 1;
  margin-left: 19.78px;
  width: 20px;
  height: 20px;
}

.icon3 {
  flex: 1;
  margin-left: 20px;
  width: 20px;
  height: 16px;
  margin-top: 4px;
}

.icon4 {
  flex: 1;
  margin-left: 20px;
  width: 17.99px;
  height: 20px;
}

.icon5 {
  flex: 1;
  margin-left: 19.01px;
  width: 14.17px;
  height: 20px;
}

@font-face {
  font-family: "Inter", sans-serif;
  src: url(Inter-VariableFont_slnt\wght.ttf);
}

.actiondiv {
  display: flex;
  margin-left: auto;
  margin-right: auto;
  justify-content: center;
  margin-top: 64px;
}

.action {
  width: 40px;
  height: 40px;
}

body {
  background-color: #fff;
  margin: 0;
}

.main-page {
  display: flex;
  flex-direction: column;
  margin-top: 0;
  background-color: #fff;
}

.title {
  flex: 1;
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
  width: 327px;
  height: 97px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  margin-top: 22px;
}

hr {
  flex: 1;
  width: 48px;
  height: 4px;
  color: rgba(54, 179, 126, 1);
  top: 121px;
  margin-right: auto;
}

.project_block {
  display: grid;
  background-color: #fff;
  grid-template-areas: "grade1" "grade2" "grade3" "grade4" "grade5" "grade6";
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
  gap: 24px;
}

.grade1 {
  grid-area: grade1;
  height: auto;
  background-color: rgba(208, 217, 212, 1);
  margin-left: auto;
  margin-right: auto;
  border: 1px solid;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom-left-radius: 3px;
}

.grade2 {
  grid-area: grade2;
  height: auto;
  background-color: rgba(208, 217, 212, 1);
  margin-left: auto;
  margin-right: auto;
  border: 1px solid;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom-left-radius: 3px;
}

.grade3 {
  grid-area: grade3;
  height: auto;
  background-color: rgba(208, 217, 212, 1);
  margin-left: auto;
  margin-right: auto;
  border: 1px solid;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom-left-radius: 3px;
}

.grade4 {
  grid-area: grade4;
  height: auto;
  background-color: rgba(208, 217, 212, 1);
  margin-left: auto;
  margin-right: auto;
  border: 1px solid;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom-left-radius: 3px;
}

.grade5 {
  grid-area: grade5;
  height: auto;
  background-color: rgba(208, 217, 212, 1);
  margin-left: auto;
  margin-right: auto;
  border: 1px solid;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom-left-radius: 3px;
}

.grade6 {
  grid-area: grade6;
  height: auto;
  background-color: rgba(208, 217, 212, 1);
  margin-left: auto;
  margin-right: auto;
  border: 1px solid;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom-left-radius: 3px;
}

.pro {
  display: flex;
  margin-top: 252px;
  max-width: 327px;
  height: auto;
  margin-left: 0;
  flex-direction: column;
  background-color: #fff;
  margin-bottom: 0;
}

.grade-title {
  margin-right: auto;
  margin-left: auto;
  text-align: center;
  max-width: 295px;
  height: 57px;
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  line-height: 32px;
  color: #3a4a42;
}

.rucsht {
  flex-direction: row;
  display: flex;
  margin-left: 55px;
  margin-right: 40px;
  height: 32px;
  max-width: 300px;
  justify-content: center;
  margin-top: 16px;
}

.ruby {
  min-width: 79px;
  height: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  color: #3a4a42;
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  background-color: rgba(208, 217, 212, 1);
}

.css {
  max-width: 21px;
  height: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  color: #3a4a42;
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  background-color: rgba(208, 217, 212, 1);
  margin-left: 8px;
}
/* ... */

